# auth_practice_django

./: db.sqlite3  pyproject.toml
authApp/: forms.py  views.py
authApp/templates/: signup.html
core/: settings.py  urls.py
templates/: base.html
